update grande de web logistics test

--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Repremar Logistics.">
   <meta name="keywords" content="Repremar, Repremar Logitics, Logistics, Logistica">
   <meta name="author" content="Repremar Group">
-  <title>Repremar Logistics Test</title>
+  <title>Repremar Logistics</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -33,15 +33,19 @@
               <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown dropdown-mega">
-                    <a class="nav-link dropdown-toggle" href="./about.html" data-bs-toggle="dropdown">Sobre Nosotros</a>
+                    <a class="nav-link dropdown-toggle" href="./" data-bs-toggle="dropdown"></a>
                     <!--/.dropdown-menu -->
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a> 
+                    <a class="nav-link dropdown-toggle" href="./about.html">Sobre Nosotros</a> 
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Info de Interés</a>
+                    <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a> 
                   </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./contenedores.html">Contenedores</a>
+                  </li>
+                  
                   <li class="nav-item dropdown dropdown-mega">
                     <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
                   </li>
@@ -121,9 +125,12 @@
             <div class="row text-center">
               <div class="col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                 <h2 class="fs-15 text-uppercase text-muted mb-3">¿QUE HACEMOS?</h2>
-                <h3 class="display-4 mb-9">Ofrecemos el más completo mix de servicios de logística y transporte: Fletes Marítimos, Full y Consolidados,
-                  Fletes Aéreos, Fletes Terrestres, Seguro de Mercadería, Despacho de Aduana
-                  y Servicios Especiales.</h3>
+                <h3 class="display-4 mb-9">Ofrecemos el más completo mix de servicios de logística y transporte:<br>
+                  &#8226; Fletes Marítimos, <br>Aéreos y Terrestres<br>
+                  &#8226; Full y Consolidados<br>
+                  &#8226; Seguro de Mercadería<br>
+                  &#8226; Despacho de Aduana<br>
+                  &#8226; Servicios Especiales</h3>
               </div>
               <!-- /column -->
             </div>
@@ -140,21 +147,65 @@
                 <div class="icon btn btn-block btn-lg btn-soft-green disabled mb-5"> <i class="uil uil-lightbulb-alt"></i> </div>
                 <h4>Soluciones</h4>
                 <p class="mb-3">Con más de 20 años de experiencia. Repremar Logistics ofrece soluciones en logistica por cualquier medio.</p>
-                <a href="#" class="more hover link-green">Learn More</a>
+                <a href="#" class="more hover link-green">Ver más</a>
               </div>
               <!--/column -->
               <div class="col-md-4">
                 <div class="icon btn btn-block btn-lg btn-soft-orange disabled mb-5"> <i class="uil uil-laptop-cloud"></i> </div>
                 <h4>Mejora Continua</h4>
                 <p class="mb-3">
-                  Estamos continuamente invirtiendo en equipamiento 
-                  y software que ayudan a resaltar y reforzar nuestras capacidades.</p>
-                <a href="#" class="more hover link-orange">Learn More</a>
+                  Estamos continuamente invirtiendo en tecnología que ayudan a resaltar y reforzar nuestras capacidades.</p>
+                <a href="#" class="more hover link-orange">Ver más</a>
               </div>
               <!--/column -->
             </div>
             <!--/.row -->
-
+            <div class="row gx-md-8 gx-xl-12 gy-10 align-items-center">
+              <div class="col-lg-6">
+                  <h2 class="fs-15 text-uppercase text-muted mb-3">Nuestro Grupo</h2>
+                  <h3 class="display-4 mb-5">Somos parte de Grupo Repremar.</h3>
+                  <p>REPREMAR es un Grupo de empresas de primera línea que ofrece servicios de agenciamiento marítimo, transporte internacional de cargas, operaciones portuarias, servicios integrales de logística, GSA de carga para aerolíneas,
+                      bienes raíces y proyectos especiales. Nuestra empresa madre, REPREMAR Shipping es una reconocida agencia marítima que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y buques
+                      de enlace que operan en cualquier puerto de la región. .</p>
+                  <a href="https://www.repremar.com" class="btn btn-primary rounded-pill mb-0">Repremar Group Web</a>
+              </div>
+              <!--/column -->
+              <div class="col-lg-6">
+                  <div class="d-flex flex-row">
+                      <div>
+                          <span class="icon btn btn-block btn-lg btn-soft-purple disabled mt-1 me-5"><span class="number fs-22">01</span></span>
+                      </div>
+                      <div>
+                          <h4 class="mb-1">Quien es Grupo Repremar?</h4>
+                          <p class="mb-0">Somos un grupo de empresas relacionadas principalmente al comercio exterior, nuestra casa madre Repremar Shipping fue fundada en 1946, pertenecía antiguamente al Vestey Group (Inglaterra). En 1982 fue adquirida
+                              por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran expansión en sus actividades y en el alcance de sus servicios.
+                          </p>
+                      </div>
+                  </div>
+                  <div class="d-flex flex-row mt-8 ms-lg-10">
+                      <div>
+                          <span class="icon btn btn-block btn-lg btn-soft-green disabled mt-1 me-5"><span class="number fs-22">02</span></span>
+                      </div>
+                      <div>
+                          <h4 class="mb-1">A quienes representa Repremar Group?</h4>
+                          <p class="mb-0">Representamos a algunas de las compañías navieras más importantes del mundo, como COSCO, CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo joint-ventures en Uruguay, Argentina,
+                              en 1993, 2005 y 2008 respectivamente..</p>
+                      </div>
+                  </div>
+                  <div class="d-flex flex-row mt-8">
+                      <div>
+                          <span class="icon btn btn-block btn-lg btn-soft-orange disabled mt-1 me-5"><span class="number fs-22">03</span></span>
+                      </div>
+                      <div>
+                          <h4 class="mb-1">Repremar Logistics</h4>
+                          <p class="mb-0">El ritmo del mundo globalizado y sus nuevas demandas llevaron a la creación de REPREMAR Logistics. Originalmente concebida en 1996 como una división de REPREMAR Shipping para desarrollar el transporte de carga marítimo
+                              y aéreo, REPREMAR Logistics se independizó el 1° de mayo de 1999. Actualmente es una de las empresas más reconocidas a nivel regional en el servicio de transporte de cargas entre Asia y la costa este de América
+                              del Sur.</p>
+                      </div>
+                  </div>
+              </div>
+              <!--/column -->
+          </div>
             <!--/.row -->
             <hr class="my-14 my-md-16" />
             <div class="row text-center">
