--- a/test/logistics/index.html
+++ b/test/logistics/index.html
@@ -40,6 +40,9 @@
                                             <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a>
                                         </li>
                                         <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="./contenedores.html">Contenedores</a>
+                                        </li>
+                                        <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="./projects.html">Proyectos</a>
                                         </li>
                                         <li class="nav-item dropdown">
