--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -33,15 +33,19 @@
                 <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
                   <ul class="navbar-nav">
                     <li class="nav-item dropdown dropdown-mega">
-                      <a class="nav-link dropdown-toggle" href="./about.html" data-bs-toggle="dropdown">Sobre Nosotros</a>
+                      <a class="nav-link dropdown-toggle" href="./" data-bs-toggle="dropdown"></a>
                       <!--/.dropdown-menu -->
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a> 
+                      <a class="nav-link dropdown-toggle" href="./about.html">Sobre Nosotros</a> 
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Info de Interés</a>
+                      <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a> 
                     </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="./contenedores.html">Contenedores</a>
+                    </li>
+                    
                     <li class="nav-item dropdown dropdown-mega">
                       <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
                     </li>
