pre prod web logistics

--- a/logistics/test/services.html
+++ b/logistics/test/services.html
@@ -170,7 +170,8 @@
           <div class="col-lg-5">
             <h2 class="fs-15 text-uppercase text-muted mb-3">QUE HACEMOS?</h2>
             <h3 class="display-4 mb-5">OFRECEMOS EL MEJOR SERVICIO QUE SE AJUSTA A TUS NECESIDADES.</h3>
-            <p>Fletes Terrestres, Fletes Aéreos, Fletes Maritimos: Full y Consolidados, Logistica para Agro Industrias, en Repremar Logistics ofrecemos una amplia variedad de servicios buscando satisfacer las necesidades de nuestros clientes.</p>          
+            <p>Fletes Terrestres, Fletes Aéreos, Fletes Maritimos: Full y Consolidados, Logistica para Agro Industrias, en Repremar Logistics ofrecemos una amplia variedad de servicios buscando satisfacer las necesidades de nuestros clientes.</p>
+            <a href="./contact.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Contactanos para más informacion</a>          
           </div>
           <!--/column -->
         </div>
