--- a/logistics/test/contenedores.html
+++ b/logistics/test/contenedores.html
@@ -117,6 +117,17 @@
                       <h4 class="mb-1">Obten tu contenedor</h4>
                       <a href="./contenedores/index.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Click Aqui</a>
                     </div>
+                    <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank" class="card shadow-lg lift h-100">
+                        <div class="card-body p-5 d-flex flex-row">
+                          <div>
+                            <span class="avatar bg-green text-white w-11 h-11 fs-20 me-4">CTNR</span>
+                          </div>
+                          <div>
+                            <span class="badge bg-pale-aqua text-aqua rounded py-1 mb-2">PDF</span>
+                            <h4 class="mb-1">Especificaciones de conteneores<br> y equipos.</h4>
+                          </div>
+                        </div>
+                      </a>
                   </div>
                 </div>
                 <!--/column -->
