--- a/logistics/test/contenedores.html
+++ b/logistics/test/contenedores.html
@@ -115,7 +115,7 @@
                     </div>
                     <div>
                       <h4 class="mb-1">Obten tu contenedor</h4>
-                      <a href="./contenedores/index.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Click Aqui</a>
+                      <a href="./contenedores/" class="btn btn-lg btn-soft-green rounded-pill me-5">Click Aqui</a>
                     </div>
                     <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank" class="card shadow-lg lift h-100">
                         <div class="card-body p-5 d-flex flex-row">
