--- a/logistics/test/contenedores/index.html
+++ b/logistics/test/contenedores/index.html
@@ -608,18 +608,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
 
             <div class="form-block-2 w-form">
-                <form data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form-2" action="success.html">
+                <form data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form-2" action="success.html"
+                data-netlify-honypot = "NombreBot"
+                >
+
                     <div class="form-group">
                       <label for="name1">Nombre</label>
-                      <input type="text" class="form-control" id="name1" name="Nombre">
+                      <input type="text" class="form-control" id="name1" name="Nombre" required>
+                      <input type="text" class="d-none" id="name1" name="NombreBot">
                     </div>
                     <div class="form-group">
                         <label for="apellido1">Apellido</label>
-                        <input type="text" class="form-control" id="apellido1" name="Apellido">
+                        <input type="text" class="form-control" id="apellido1" name="Apellido" required>
                       </div>
                       <div class="form-group">
                         <label for="email1">Email</label>
-                        <input type="email" class="form-control" id="email1" name="Email">
+                        <input type="email" class="form-control" id="email1" name="Email" required>
                       </div>
                       <div class="form-group">
                         <label for="comentarios1">Comentarios</label>
