--- a/logistics/test/contenedores/index.html
+++ b/logistics/test/contenedores/index.html
@@ -698,16 +698,16 @@
                         action="success.html" data-netlify-honeypot="botfield">
                         <div class="form-group">
                             <label for="name1">Nombre</label>
-                            <input type="text" class="form-control" id="name1" name="Nombre">
+                            <input type="text" class="form-control" id="name1" name="Nombre" required>
                             <input type="text" class="d-none" id="botfield" name="Nombre">
                         </div>
                         <div class="form-group">
                             <label for="apellido1">Apellido</label>
-                            <input type="text" class="form-control" id="apellido1" name="Apellido">
+                            <input type="text" class="form-control" id="apellido1" name="Apellido" required>
                         </div>
                         <div class="form-group">
                             <label for="email1">Email</label>
-                            <input type="email" class="form-control" id="email1" name="Email">
+                            <input type="email" class="form-control" id="email1" name="Email" required>
                         </div>
                         <div class="form-group">
                             <label for="comentarios1">Comentarios</label>
