--- a/logistics/test/services.html
+++ b/logistics/test/services.html
@@ -99,7 +99,7 @@
       <div class="container pt-19 pt-md-21 pb-18 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-10 col-lg-8 col-xl-7 col-xxl-6 mx-auto">
-            <h1 class="display-1 text-white mb-4">Rpremar Logistics ofrece <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="seguridad,soluciones,calidad"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
+            <h1 class="display-1 text-white mb-4">Repremar Logistics ofrece <br /><span class="typer text-repre text-nowrap" data-delay="100" data-words="seguridad,soluciones,calidad"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
             <p class="lead fs-lg px-md-3 px-lg-7 px-xl-9 px-xxl-10">Repremar Logistics ofrece el más completo mix de servicios de transporte y logística.</p>
           </div>
           <!-- /column -->
