--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Repremar Logistics.">
-  <meta name="keywords" content="Repremar, Repremar Logitics, Logistics, Logistica">
+  <meta name="keywords" content="Repremar, Repremar Logitics, Logistics, Logistica, PGAUNA1372">
   <meta name="author" content="Repremar Group">
   <title>Repremar Logistics</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
