--- a/logistics/test/services.html
+++ b/logistics/test/services.html
@@ -143,7 +143,7 @@
                 <div class="card bg-pale-leaf">
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/puzzle-2.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="" />
-                    <h4>Carga de Projecto</h4>
+                    <h4>Carga de Proyecto</h4>
                     <p class="mb-0">Embarcamos carga desde proveedores alrededor del globo y las entregamos en sitios de construcción en cualquier parte del mundo. </p>
                   </div>
                   <!--/.card-body -->
