--- a/logistics/test/about.html
+++ b/logistics/test/about.html
@@ -222,7 +222,7 @@
         <div class="col-lg-4">
           <div class="widget">
             <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-            <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos sus problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
+            <p class="lead mb-5">Repremar Logistics se ocupará de solucionar todos sus problemas logísticos para que puedas desarrollar tu negocio sin preocupaciones.</p>
             <a href="./contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
           </div>
           <!-- /.widget -->
