--- a/logistics/test/contenedores.html
+++ b/logistics/test/contenedores.html
@@ -115,7 +115,6 @@
             <p class="lead fs-lg">Amplia variedad de contenedores para tus necesidades.</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6">
-                <ul>
                   <div class="d-flex flex-row">
                     <div>
                       <img src="./assets/img/icons/lineal/link.svg" class="svg-inject icon-svg icon-svg-sm me-4"
@@ -125,6 +124,8 @@
                       <h4 class="mb-1">Obten tu contenedor</h4>
                       <a href="./contenedores/index.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Click Aqui</a>
                     </div>
+                  </div>
+                  <div class="d-flex flex-row">
                     <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank"
                       class="card shadow-lg lift h-100">
                       <div class="card-body p-5 d-flex">
@@ -138,7 +139,6 @@
                       </div>
                     </a>
                   </div>
-                </ul>
               </div>
               <!--/column -->
               <!--/column -->
