--- a/logistics/test/services.html
+++ b/logistics/test/services.html
@@ -21,7 +21,7 @@
               <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
                 <div class="navbar-brand w-100">
                   <a href="./index.html">
-                    <img src="./assets/img/replog.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
+                    <img src="./assets/img/replog.png"/>
                   </a>
                 </div>
                 <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -170,7 +170,10 @@
           <div class="col-lg-5">
             <h2 class="fs-15 text-uppercase text-muted mb-3">QUE HACEMOS?</h2>
             <h3 class="display-4 mb-5">OFRECEMOS EL MEJOR SERVICIO QUE SE AJUSTA A TUS NECESIDADES.</h3>
-            <p>Fletes Terrestres, Fletes Aéreos, Fletes Maritimos: Full y Consolidados, Logistica para Agro Industrias, en Repremar Logistics ofrecemos una amplia variedad de servicios buscando satisfacer las necesidades de nuestros clientes.</p>
+            <p>&#8226; Fletes Terrestres, Fletes Aéreos, Fletes Maritimos. 
+              <br>&#8226; Full y Consolidados.
+              <br>&#8226; Logistica para Agro Industrias.
+              <br>&#8226; Repremar Logistics ofrecemos una amplia variedad de servicios<br>&#160;&#160;&#160;&#160;buscando satisfacer las necesidades de nuestros clientes.</p>
             <a href="./contact.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Contactanos para más informacion</a>          
           </div>
           <!--/column -->
