--- a/logistics/test/about.html
+++ b/logistics/test/about.html
@@ -22,7 +22,7 @@
           <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img src="./assets/img/replog.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
+                <img src="./assets/img/replog.png"/>
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
