se saco el wapp button (hide) de web containers

--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -623,7 +623,7 @@
         .rectangle {
             width: 100px;
             height: 40px;
-            background-color:red;
+            background-color: red;
             color: white;
             text-align: center;
             line-height: 40px;
@@ -631,10 +631,11 @@
             margin-top: 10px;
             /* Adjust as needed to vertically center the text */
         }
+
         .rectangle-ok {
             width: 100px;
             height: 40px;
-            background-color:rgb(16, 193, 247);
+            background-color: rgb(16, 193, 247);
             color: white;
             text-align: center;
             line-height: 40px;
@@ -993,7 +994,7 @@
             </div>-->
         <!-- <div class="section">
                 <div class="container">
-                   <!--  <div class="w-layout-grid footer"><a href="/"
+                 <div class="w-layout-grid footer"><a href="/"
                             id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e2971b-87e29718" aria-current="page"
                             class="logo-link w-inline-block w--current"><img
                                 src="https://assets-global.website-files.com/654108e2c9f54f7608d2d791/65411e3b0d7174759d3a0137_c-3_pie.png"
