--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -721,13 +721,9 @@
                     <form data-netlify="true" onSubmit="submit" name="containers" method="post" class="form-2"
                         action="success.html" data-netlify-honeypot="botfield">
                         <div class="form-group">
-                            <label for="name1">Nombre</label>
+                            <label for="name1">Nombre y Apellido</label>
                             <input type="text" class="form-control" id="name1" name="Nombre" required>
                             <input type="text" class="d-none" id="botfield" name="Nombre">
-                        </div>
-                        <div class="form-group">
-                            <label for="apellido1">Apellido</label>
-                            <input type="text" class="form-control" id="apellido1" name="Apellido" required>
                         </div>
                         <div class="form-group">
                             <label for="email1">Email</label>
