--- a/new/shipping/services.html
+++ b/new/shipping/services.html
@@ -100,12 +100,10 @@
       <div class="container pt-19 pt-md-21 pb-18 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-10 col-lg-8 col-xl-7 col-xxl-6 mx-auto">
-            <h1 class="display-1 text-white mb-4">Repremar Logistics ofrece <br /><span
-                class="typer text-repre text-nowrap" data-delay="100"
-                data-words="seguridad,soluciones,calidad"></span><span class="cursor text-primary"
-                data-owner="typer"></span></h1>
-            <p class="lead fs-lg px-md-3 px-lg-7 px-xl-9 px-xxl-10">Repremar Logistics ofrece el más completo mix de
-              servicios de transporte y logística.</p>
+            <h1 class="display-1 text-white mb-4">Repremar Shipping <br /><span class="typer text-repre text-nowrap"
+                data-delay="100" data-words="responsabilidad,soluciones,calidad"></span><span
+                class="cursor text-primary" data-owner="typer"></span></h1>
+            <p class="lead fs-lg px-md-3 px-lg-7 px-xl-9 px-xxl-10">Agenciamiento maritimo con respaldo en calidad.</p>
           </div>
           <!-- /column -->
         </div>
@@ -114,12 +112,47 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 100px; padding-bottom: 200px;">
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 100px; padding-bottom: 150px;">
       <h2 class="display-4 mb-3 text-center">Trabajamos en todos los puertos de Uruguay.</h2>
-      <figure class="rounded"><img src="./assets/img/photos/puertos.jpg" style="width: 80%; padding-left: 21%; padding-top: 20px;"/></figure>
+      <figure class="rounded"><img src="./assets/img/photos/puertos.jpg"
+          style="width: 75%; padding-left: 25%; padding-top: 20px;" /></figure>
       <!-- /.container -->
     </section>
-     
+
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 5px; padding-bottom: 50px;">
+      <h2 class="display-4 mb-3 text-center">Cruises</h2>
+      <figure class="rounded"><img src="logos/cruiseslogos.png"
+          style="width: 75%; padding-left: 25%; padding-top: 20px;" /></figure>
+      <!-- /.container -->
+    </section>
+
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 5px; padding-bottom: 50px;">
+      <h2 class="display-4 mb-3 text-center">Container Lines</h2>
+      <figure class="rounded"><img src="logos/containerslogos.png"
+          style="width: 45%; padding-left: 21%; padding-top: 20px; margin-left: 315px;" /></figure>
+      <!-- /.container -->
+    </section>
+
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 5px; padding-bottom: 50px;">
+      <h2 class="display-4 mb-3 text-center">Bulkcarriers</h2>
+      <figure class="rounded"><img src="logos/bulkcarrieslogo.png"
+          style="width: 75%; padding-left: 25%; padding-top: 20px;" /></figure>
+      <!-- /.container -->
+    </section>
+
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 5px; padding-bottom: 50px;">
+      <h2 class="display-4 mb-3 text-center">Hub Agencies</h2>
+      <figure class="rounded"><img src="logos/hubagencieslogos.png"
+          style="width: 75%; padding-left: 25%; padding-top: 20px;" /></figure>
+      <!-- /.container -->
+    </section>
+
+    <section class="wrapper bg-light" style="padding-left: 5%; padding-top: 5px; padding-bottom: 50px;">
+      <h2 class="display-4 mb-3 text-center">Oil & Gas</h2>
+      <figure class="rounded"><img src="logos/oillogos.png"
+          style="width: 55%; padding-left: 21%; padding-top: 20px; margin-left: 220px;" /></figure>
+      <!-- /.container -->
+    </section>
 
   </div>
   <!-- /.content-wrapper -->
