--- a/new/shipping/contact.html
+++ b/new/shipping/contact.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/colors/aqua.css">
+  <link rel="stylesheet" href="./assets/css/colors/red.css">
 </head>
 
 <body>
@@ -190,9 +190,9 @@
             <!-- /column -->
             <div class="col-md-4 col-lg-2 offset-lg-2">
               <div class="widget">
-                <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
+                <h4 class="widget-title text-white mb-3"></h4>
                 <ul class="list-unstyled text-reset mb-0">
-                  <li><a href="./contact.html">Contacta con soporte</a></li>
+                  <li><a href="./contact.html"></a></li>
                 </ul>
               </div>
               <!-- /.widget -->
@@ -204,7 +204,7 @@
                 <ul class="list-unstyled  mb-0">
                   <li><a href="#" style="color:white">Sobre nosotros</a></li>
                   <li><a href="#" style="color:white">Servicios</a></li>
-                  <li><a href="#" style="color:white">Info de Interés</a></li>
+                  
                 </ul>
               </div>
               <!-- /.widget -->
