--- a/new/shipping/about.html
+++ b/new/shipping/about.html
@@ -102,80 +102,75 @@
           <div class="col-xl-6 mx-auto">
             <h1 class="display-1 mb-4">REPREMAR SHIPPING</h1>
             <p class="lead fs-lg mb-4">Miembro de Grupo Repremar.</p>
+            <figure class="position-relative" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/about2.jpg"
+              alt="" /></figure>
           </div>
           <!-- /column -->
         </div>
         <!-- /.row -->
       </div>
       <!-- /.container -->
-      <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/bg12.jpg"
-          alt="" /></figure>
     </section>
     <!-- /section -->
     <section class="wrapper bg-light angled upper-end lower-end">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
-          <div class="col-lg-6 position-relative order-lg-2">
-            <div class="shape bg-dot primary rellax w-16 h-20" data-rellax-speed="1" style="top: 3rem; left: 5.5rem">
+        
+        <div class="container py-14 py-md-16">
+          <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
+            <div class="col-md-8 col-lg-6 col-xl-5 order-lg-2 position-relative">
+              <div class="shape bg-soft-primary rounded-circle rellax w-20 h-20" data-rellax-speed="1"
+                style="top: -2rem; right: -1.9rem;"></div>
+              <figure class="rounded"><img src="./assets/img/photos/about1.jpg"
+                  srcset="./assets/img/photos/about7@2x.jpg 2x" alt=""></figure>
             </div>
-            <div class="overlap-grid overlap-grid-2">
-              <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/about2.jpg"
-                    srcset="./assets/img/photos/about2@2x.jpg 2x" alt=""></figure>
+            <!--/column -->
+            <div class="col-lg-6">
+              <h2 class="display-4 mb-3">¿Quienes somos?</h2>
+              <p class="lead fs-lg">REPREMAR fue fundada en el año 1946 y desde entonces provee servicios de agenciamiento marítimo y
+                portuarios a las principales compañías navieras y buques que operan en la Costa Este de Sudamérica y Rio
+                de la Plata.</p>
+              <p class="mb-6">Antiguamente perteneciente al Grupo Vestey de Inglaterra, desde 1982 pasa a control de la familia Pena.
+                Bajo la conducción de sus nuevos propietarios, la compañía fue reorganizada y diversificó su espectro de
+                servicios y unidades de negocios.</p>
+                <p class="mb-6">Actualmente REPREMAR Shipping forma parte de uno de los grupos locales más importantes en la provisión de
+                  servicios de agenciamiento marítimo, operaciones portuarias, logística y transporte internacional de
+                  cargas
+                  en sus diferentes modalidades: marítimo, aéreo y terrestre</p>
+              <div class="row gx-xl-10 gy-6">
+                <div class="col-md-6">
+                  <div class="d-flex flex-row">
+                    <div>
+                      <img src="./assets/img/icons/lineal/target.svg" class="svg-inject icon-svg icon-svg-sm me-4"
+                        alt="" />
+                    </div>
+                    <div>
+                      <h4 class="mb-1"></h4>
+                      <p class="mb-0">Ofrecemos un enfoque moderno a nuestro servicio,
+                        adaptandonos continuamente a los cambios en el rubro..</p>
+                    </div>
+                  </div>
+                </div>
+                <!--/column -->
+                <div class="col-md-6">
+                  <div class="d-flex flex-row">
+                    <div>
+                      <img src="./assets/img/icons/lineal/award-2.svg" class="svg-inject icon-svg icon-svg-sm me-4"
+                        alt="" />
+                    </div>
+                    <div>
+                      <h4 class="mb-1"></h4>
+                      <p class="mb-0">Invertimos continuamente en equipo y
+                        software para reforzar nuestras capacidades.</p>
+                    </div>
+                  </div>
+                </div>
+                <!--/column -->
               </div>
-              <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/about3.jpg"
-                    srcset="./assets/img/photos/about3@2x.jpg 2x" alt=""></figure>
-              </div>
+              <!--/.row -->
             </div>
+            <!--/column -->
           </div>
-          <!--/column -->
-          <div class="col-lg-6">
-            
-            <img src="./assets/img/icons/lineal/megaphone.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
-            <h2 class="display-4 mb-3">¿Quienes somos?</h2>
-            <p class="lead fs-lg">
-              REPREMAR fue fundada en el año 1946 y desde entonces provee servicios de agenciamiento marítimo y
-              portuarios a las principales compañías navieras y buques que operan en la Costa Este de Sudamérica y Rio
-              de la Plata.</p>
-            <p class="mb-6">
-
-              Antiguamente perteneciente al Grupo Vestey de Inglaterra, desde 1982 pasa a control de la familia Pena.
-              Bajo la conducción de sus nuevos propietarios, la compañía fue reorganizada y diversificó su espectro de
-              servicios y unidades de negocios.
-            </p>
-            <p class="mb-6">
-              Actualmente REPREMAR Shipping forma parte de uno de los grupos locales más importantes en la provisión de
-              servicios de agenciamiento marítimo, operaciones portuarias, logística y transporte internacional de
-              cargas
-              en sus diferentes modalidades: marítimo, aéreo y terrestre
-            </p>
-            <div class="row gy-3 gx-xl-8">
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Certificados en calidad.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Desde el 1º de enero del año 2000,
-                      REPREMAR Shipping ha sido designada como miembro exclusivo en Uruguay, de la red global de
-                      agencias marítimas MULTIPORT. Esta red, la más importante en su rubro, renovó la confianza y
-                      transparencia en la actividad de agenciamiento marítimo, seleccionando exclusivos miembros que
-                      representan sus valores: Calidad, Integridad y Profesionalismo.</span></li>
-                </ul>
-              </div>
-              <!--/column -->
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Ofrecemos un enfoque moderno a nuestro servicio,
-                      adaptandonos continuamente a los cambios en el rubro.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Invertimos continuamente en equipo y
-                      software para reforzar nuestras capacidades.
-                    </span></li>
-                </ul>
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-          </div>
-          <!--/column -->
+          <!--/.row -->
         </div>
         <!--/.row -->
         <div class="row gx-md-8 gx-xl-12 gy-10 align-items-center">
@@ -215,10 +210,7 @@
               </div>
               <div>
                 <h4 class="mb-1">¿A quienes representa Repremar Group?</h4>
-                <p class="mb-0">Representamos a algunas de las compañías navieras más importantes del mundo, como COSCO,
-                  CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo
-                  joint-ventures en Uruguay, Argentina,
-                  en 1993, 2005 y 2008 respectivamente..</p>
+                <p class="mb-0">Hemos representado navieras como COSCO, CHINA SHIPPING y CSAV, en la actualidad trabajamos con Yang Ming Lines como full agent y partners de Happag Lloyd.</p>
               </div>
             </div>
           </div>
@@ -249,9 +241,9 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2 offset-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
+            <h4 class="widget-title text-white mb-3"></h4>
             <ul class="list-unstyled text-reset mb-0">
-              <li><a href="./contact.html">Contacta con soporte</a></li>
+              <li><a href="./contact.html"></a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -263,7 +255,7 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="#" style="color:white">Sobre nosotros</a></li>
               <li><a href="#" style="color:white">Servicios</a></li>
-              <li><a href="#" style="color:white">Info de Interés</a></li>
+
             </ul>
           </div>
           <!-- /.widget -->
