--- a/new/shipping/index.html
+++ b/new/shipping/index.html
@@ -96,29 +96,44 @@
       <!-- /.navbar -->
     </header>
     <!-- /header -->
-    <section class="wrapper bg-gray">
-      <div class="container pt-12 pt-md-16 text-center">
-        <div class="row">
-          <div class="col-lg-8 col-xxl-7 mx-auto text-center" data-cues="slideInDown" data-group="page-title"
-            data-delay="600">
-
-            <h1 class="display-1 fs-37 mb-7">DESDE 1946 REDEFINIENDO EL AGENCIAMIENTO MARITIMO EN LA REGIÓN</h1>
-            <div class="d-flex justify-content-center mb-5 mb-md-0" data-cues="slideInDown"
-              data-group="page-title-buttons" data-delay="900">
-              <span><a href="./about.html" class="btn btn-lg btn-primary rounded-pill me-2">Ver más</a></span>
-              <span><a href="./contact.html" class="btn btn-lg btn-outline-primary rounded-pill">Contacto</a></span>
-            </div>
+    <section class="wrapper bg-gray" style="margin-bottom: 200px;">
+      <div class="swiper-container swiper-thumbs-container swiper-fullscreen nav-dark" data-margin="0" data-autoplay="true" data-autoplaytime="7000" data-nav="true" data-dots="false" data-items="1" data-thumbs="true">
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/index1.jpg"></div>
+            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/index2.jpg"></div>
+            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/index3.jpg"></div>
+            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/index4.jpg"></div>
           </div>
-          <div>
-
-          </div>
-          <!--/column -->
+          <!--/.swiper-wrapper -->
         </div>
-        <!-- /.row -->
+        <!-- /.swiper -->
+        <div class="swiper swiper-thumbs">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="./assets/img/photos/index1.jpg" srcset="./assets/img/photos/index1.jpg 2x" alt="" /></div>
+            <div class="swiper-slide"><img src="./assets/img/photos/index2.jpg" srcset="./assets/img/photos/index2.jpg 2x" alt="" /></div>
+            <div class="swiper-slide"><img src="./assets/img/photos/index3.jpg" srcset="./assets/img/photos/index3.jpg 2x" alt="" /></div>
+            <div class="swiper-slide"><img src="./assets/img/photos/index4.jpg" srcset="./assets/img/photos/index4.jpg 2x" alt="" /></div>
+          </div>
+          <!--/.swiper-wrapper -->
+        </div>
+        <!-- /.swiper -->
+        <div class="swiper-static">
+          <div class="container h-100 d-flex align-items-center justify-content-center">
+            <div class="row">
+              <div class="col-lg-8 mx-auto mt-n10 text-center">
+                <h1 class="fs-19 text-uppercase ls-xl text-white mb-3 animate__animated animate__zoomIn animate__delay-1s">REPREMAR SHIPPING</h1>
+                <h2 class="display-1 fs-60 text-white mb-0 animate__animated animate__zoomIn animate__delay-2s">DESDE 1946 REDEFINIENDO EL AGENCIAMIENTO MARITIMO EN LA REGIÓN</h2>
+              </div>
+              <!-- /column -->
+            </div>
+            <!-- /.row -->
+          </div>
+          <!-- /.container -->
+        </div>
+        <!-- /.swiper-static -->
       </div>
-      <!-- /.container -->
-      <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/1Index.png"
-          alt="" height="50%" style="height: 50%;" /></figure>
+      <!-- /.swiper-container -->
     </section>
     <!-- /section -->
     <section class="wrapper bg-gray">
@@ -351,9 +366,9 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2 offset-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
+            <h4 class="widget-title text-white mb-3"></h4>
             <ul class="list-unstyled text-reset mb-0">
-              <li><a href="./contact.html">Contacta con soporte</a></li>
+              <li><a href="./contact.html"></a></li>
             </ul>
           </div>
           <!-- /.widget -->
