--- a/new/shipping/services.html
+++ b/new/shipping/services.html
@@ -170,9 +170,9 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2 offset-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
+            <h4 class="widget-title text-white mb-3"></h4>
             <ul class="list-unstyled text-reset mb-0">
-              <li><a href="./contact.html">Contacta con soporte</a></li>
+              <li><a href="./contact.html"></a></li>
             </ul>
           </div>
           <!-- /.widget -->
